--- a/submarino2.html
+++ b/submarino2.html
@@ -60,13 +60,13 @@
     </div>
 
     <script type="importmap">
-        {
-            "imports": {
-                "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
-                "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/"
-            }
+    {
+        "imports": {
+            "three": "https://cdn.skypack.dev/three@0.160.0",
+            "three/addons/": "https://cdn.skypack.dev/three@0.160.0/examples/jsm/"
         }
-    </script>
+    }
+   </script>
 
     <script type="module">
         import * as THREE from 'three';
